test/exercises/c-ray/c-ray.noreal.good
c-ray.chpl:113: error: pixelType must be an integral type
